<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/fragment_mapper_ll_StaffBlock"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/patient_background"
        android:orientation="vertical"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/fragment_mapper_tv_StaffName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:textColor="@color/primary_text"
            android:textSize="26sp"
            tools:text="@string/sample_StaffName" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/fragment_mapper_tv_StaffBarcode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:textColor="@color/primary_text"
            android:textSize="26sp"
            tools:text="@string/sample_StaffID" />

    </LinearLayout>

    <android.support.v7.widget.AppCompatImageView
        android:id="@+id/fragment_mapper_iv_Divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/divider"
        app:layout_constraintTop_toBottomOf="@id/fragment_mapper_ll_StaffBlock" />

    <LinearLayout
        android:id="@+id/fragment_mapper_ll_PatientBlock"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:background="@drawable/underline"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fragment_mapper_iv_Divider">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/title_background">

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/fragment_mapper_tv_PatientLabel"
                android:layout_width="match_parent"
                android:layout_height="42dp"
                android:layout_marginStart="16dp"
                android:gravity="center_vertical"
                android:text="@string/display_PatientLabel"
                android:textColor="@color/secondary_text"
                android:textSize="24sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/block_background"
            android:orientation="horizontal">

            <android.support.v7.widget.AppCompatImageButton
                android:id="@+id/fragment_mapper_imgBtn_PatientBarcodeScan"
                android:layout_width="109dp"
                android:layout_height="103dp"
                android:layout_gravity="center_vertical"
                android:background="@android:color/transparent"
                android:scaleType="fitXY"
                app:srcCompat="@drawable/ico_barcode" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:orientation="vertical">

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/fragment_mapper_tv_PatientName"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:textColor="@color/primary_text"
                    android:textSize="30sp"
                    tools:text="@string/sample_PatientName" />

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/fragment_mapper_tv_PatientBarcode"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:textColor="@color/primary_text"
                    android:textSize="32sp"
                    tools:text="@string/sample_PatientID" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/fragment_mapper_ll_DeviceBlock"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:background="@drawable/underline"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fragment_mapper_ll_PatientBlock">

        <LinearLayout
            android:background="@color/title_background"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/fragment_mapper_tv_DeviceLabel"
                android:layout_width="match_parent"
                android:layout_height="42dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="5dp"
                android:text="@string/display_DeviceLabel"
                android:textColor="@color/secondary_text"
                android:textSize="24sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/block_background"
            android:orientation="horizontal">

            <android.support.v7.widget.AppCompatImageButton
                android:id="@+id/fragment_mapper_imgBtn_DeviceBarcodeScan"
                android:layout_width="109dp"
                android:layout_height="103dp"
                android:layout_gravity="center_vertical"
                android:background="@android:color/transparent"
                android:scaleType="fitXY"
                app:srcCompat="@drawable/ico_barcode" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:orientation="vertical">

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/fragment_mapper_tv_DeviceBarcode"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:textColor="@color/primary_text"
                    android:textSize="30sp"
                    tools:text="@string/sample_DeviceName" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <android.support.v7.widget.AppCompatCheckBox
                        android:id="@+id/fragment_mapper_cb_DeviceReserved"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="15dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="10dp"
                        android:layout_marginBottom="10dp"
                        android:checked="true"
                        android:scaleX="1.9"
                        android:scaleY="1.9"
                        android:text="@string/display_CheckBox"
                        android:textColor="@color/primary_text"
                        app:buttonTint="@color/primary_text" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/fragment_mapper_btn_UploadMapper"
        android:layout_width="240dp"
        android:layout_height="36dp"
        android:layout_marginBottom="30dp"
        android:background="@color/button_background"
        android:text="@string/btn_upload_mapper"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/secondary_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>